--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </li>
                 <li>
                     <a href="student_home.php">
-								<div class="formatbar">
+								<div class="sidebar-icon-format">
 								<img src="images/home.png">
 								Dashboard
 								</div>
@@ -57,7 +57,7 @@
                     <a href="#">Events</a>
                 </li>
                 <li>
-                   <a href="#"><div class="formatbar">
+                   <a href="#"><div class="sidebar-icon-format">
 								<img src="images/about.png">  About	</div></a>
                 </li>
                 <li>
