--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li>
                     <a href="student_home.php">
 								<div class="sidebar-icon-format">
-								<img src="images/home.png">
+								<img src="https://cloud.githubusercontent.com/assets/7339334/9883009/c3cb7f18-5ba5-11e5-962a-1e30a46a9c54.png">
 								Dashboard
 								</div>
                 </li>
