Add Collapse to menu

--- a/index.html
+++ b/index.html
@@ -39,10 +39,30 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a data-toggle="collapse" href="#dashboard" aria-expanded="false">Dashboard <span class="caret"></span></a>
+                    <div class="collapse sub-bar" id="dashboard">
+                        <a href="#">Dashboard Sub 1</a>
+                        <a data-toggle="collapse" href="#dashboard-sub-2" aria-expanded="false">Dashboard Sub 2 <span class="caret"></span></a>
+                        <div class="collapse sub-bar" id="dashboard-sub-2">
+                            <a href="#">Dashboard Sub Sub 1</a>
+                            <a data-toggle="collapse" href="#dashboard-sub-sub-2" aria-expanded="false">Dashboard Sub Sub 2 <span class="caret"></span></a>
+                            <div class="collapse sub-bar" id="dashboard-sub-sub-2">
+                                <a href="#">Dashboard Sub Sub Sub 1</a>
+                                <a href="#">Dashboard Sub Sub Sub 2</a>
+                            </div>
+                        </div>
+                    </div>
                 </li>
                 <li>
-                    <a href="#">Shortcuts</a>
+                    <a data-toggle="collapse" href="#shortcuts" aria-expanded="false">Shortcuts <span class="caret"></span></a>
+                    <div class="collapse sub-bar" id="shortcuts"> 
+                        <a data-toggle="collapse" href="#shortcuts-sub-1" aria-expanded="false">Shortcuts Sub 1 <span class="caret"></span></a>
+                        <div class="collapse sub-bar" id="shortcuts-sub-1">
+                            <a href="#">Shortcuts Sub Sub 1</a>
+                            <a href="#">Shortcuts Sub Sub 2</a>
+                        </div>
+                        <a href="#">Shortcuts Sub 2</a>
+                    </div>
                 </li>
                 <li>
                     <a href="#">Overview</a>
