Editted the index page and some css

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="This is the classwebsite for Computer Science I at Saint Patrick High School.">
+    <meta name="author" content="Eric Fleming">
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>Computer Science I</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -35,29 +35,29 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        Start Bootstrap
+                        Quick Links
                     </a>
                 </li>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">Shortcuts</a>
+                    <a href="pg/calendar.html">Class Calendar</a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a href="pg/videos.html">Videos</a>
                 </li>
                 <li>
-                    <a href="#">Events</a>
+                    <a href="pg/reference.html">Basic Reference</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#">Long-term Programs</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a href="pg/about.html">About</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="pg/contact.html">Contact</a>
                 </li>
             </ul>
         </div>
