--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 </head>
 
 <body>
-
     <div id="wrapper">
 
         <!-- Sidebar -->
@@ -71,7 +70,7 @@
                         <h1>Simple Sidebar</h1>
                         <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <a href="#wrapper" class="btn btn-default" id="menu-toggle" data-toggle="simple-sidebar" data-target="#wrapper">Toggle Menu</a>
                     </div>
                 </div>
             </div>
@@ -87,13 +86,8 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <!-- Menu Toggle Script -->
-    <script>
-    $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-    });
-    </script>
+    <!-- Simple Sidebar JavaScript -->
+    <script src="js/simple_sidebar.js"></script>
 
 </body>
 
