--- a/index.html
+++ b/index.html
@@ -39,25 +39,22 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="#">Projects</a>
                 </li>
                 <li>
-                    <a href="#">Shortcuts</a>
+                    <a href="#">Publications</a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a href="#">Resume</a>
                 </li>
                 <li>
-                    <a href="#">Events</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
+                    <a href="#">Miscellaneous</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
+                </li>
+                <li>
+                    <a href="#">Links</a>
                 </li>
             </ul>
         </div>
@@ -68,10 +65,9 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Simple Sidebar</h1>
-                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <h1>Fanchi Meng</h1>
+                        <p>I'm currently a Ph.D. student in Department of Electrical and Computer Engineering, University of Alberta.</p>
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
                     </div>
                 </div>
             </div>
