--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,9 @@
             <div id="sidebar-wrapper">
                 <ul class="sidebar-nav">
                     <li class="sidebar-brand">
-                        <a href="index.html">Home</a>
+                        <a href="index.html">
+                            Home
+                        </a>
                     </li>
                     <li>
                         <a href="#">Projects</a>
@@ -63,8 +65,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1>Fanchi Meng</h1>
-                            <p>I'm currently a Ph.D. student in Department of Electrical and Computer Engineering, University of Alberta.</p>
+                            <p>Please see this PDF file for my resume</p>
                             <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
                         </div>
                     </div>
