index using anchors

--- a/index.html
+++ b/index.html
@@ -34,25 +34,19 @@
             <div id="sidebar-wrapper">
                 <ul class="sidebar-nav">
                     <li class="sidebar-brand">
-                        <a href="index.html">Home</a>
+                        <a href="#home">Home</a>
                     </li>
                     <li>
-                        <a href="#">Projects</a>
+                        <a href="#project">Projects</a>
                     </li>
                     <li>
-                        <a href="#">Publications</a>
+                        <a href="#publications">Publications</a>
                     </li>
                     <li>
-                        <a href="resume.html">Resume</a>
+                        <a href="#resume">Resume</a>
                     </li>
                     <li>
-                        <a href="#">Miscellaneous</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#">Links</a>
+                        <a href="#links">Links</a>
                     </li>
                 </ul>
             </div>
@@ -63,8 +57,30 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1>Fanchi Meng</h1>
-                            <p>I'm currently a Ph.D. student in Department of Electrical and Computer Engineering, University of Alberta.</p>
+                            <a name="home">
+                                <h1>Fanchi Meng</h1>
+                                <p>I'm currently a Ph.D. student in Department of Electrical and Computer Engineering, University of Alberta.</p> 
+                            </a>
+
+                            <a name="project">
+                                <h1>Project</h1>
+                                <p>lines for projects</p> 
+                            </a>
+
+                            <a name="publications">
+                                <h1>Publications</h1>
+                                <p>lines for publications</p> 
+                            </a>
+
+                            <a name="resume">
+                                <h1>Resume</h1>
+                                <iframe src="FanchiMeng_resume_Oct2016.html" height="2300" width="900" scrolling="no"></iframe> 
+                            </a>
+
+                            <a name="links">
+                                <h1>Links</h1>
+                                <p>lines for links</p> 
+                            </a>
                             <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
                         </div>
                     </div>
