--- a/resume.html
+++ b/resume.html
@@ -57,37 +57,33 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                                <h1>Fanchi Meng</h1>
-                                <p>I'm currently a Ph.D. student in Department of Electrical and Computer Engineering, University of Alberta.</p>
-                                <br>
-                                <img src="pics/wordcloud.png">
-                                <br>
-                                <h1>Research Interest</h1>
-                                <p>Lines for research interest</p>
-                            <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- /#page-content-wrapper -->
+                         <h1>Resume</h1>
+                         <iframe src="FanchiMeng_resume_Oct2016.html" height="2300" width="900" scrolling="no"></iframe>
+                         <br>
+                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
+                     </div>
+                 </div>
+             </div>
+         </div>
+         <!-- /#page-content-wrapper -->
 
-        </div>
-        <!-- /#wrapper -->
+     </div>
+     <!-- /#wrapper -->
 
-        <!-- jQuery -->
-        <script src="js/jquery.js"></script>
+     <!-- jQuery -->
+     <script src="js/jquery.js"></script>
 
-        <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
+     <!-- Bootstrap Core JavaScript -->
+     <script src="js/bootstrap.min.js"></script>
 
-        <!-- Menu Toggle Script -->
-        <script>
-            $("#menu-toggle").click(function(e) {
-                e.preventDefault();
-                $("#wrapper").toggleClass("toggled");
-            });
-        </script>
+     <!-- Menu Toggle Script -->
+     <script>
+        $("#menu-toggle").click(function(e) {
+            e.preventDefault();
+            $("#wrapper").toggleClass("toggled");
+        });
+    </script>
 
-    </body>
+</body>
 
-    </html>
+</html>
