--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <h1>Fanchi Meng</h1>
                                 <p>I'm currently a Ph.D. student in Department of Electrical and Computer Engineering, University of Alberta.</p>
                                 <br>
-                                <img src="pics/wordcloud.png">
+                                <img src="pics/wordsift.png">
                                 <br>
                                 <h1>Research Interest</h1>
                                 <p>Lines for research interest</p>
