--- a/index.html
+++ b/index.html
@@ -57,13 +57,17 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                                <h1>Fanchi Meng</h1>
-                                <p>I'm currently a Ph.D. student in Department of Electrical and Computer Engineering, University of Alberta.</p>
-                                <br>
-                                <img src="pics/wordsift.png">
-                                <br>
-                                <h1>Research Interest</h1>
-                                <p>Lines for research interest</p>
+                            <h1>Fanchi Meng</h1>
+                            <p>I'm currently a Ph.D. candidate in <a href="http://www.ece.engineering.ualberta.ca/">Department of Electrical and Computer Engineering</a>, <a href="https://www.ualberta.ca/">University of Alberta</a>. I received my B.Eng. (Computer Science and Technology) and M.Eng. (Computer Application Technology) from <a href="http://cie.nwsuaf.edu.cn/">College of Information Engineering</a>, <a href="http://en.nwsuaf.edu.cn/index.htm">Northwest Agricultural & Forestry University</a>, China.</p>
+                            <br>
+                            <img src="pics/wordsift.png">
+                            <br>
+                            <h1>Area of Interest</h1>
+
+                            <h4>Computational Predictive Models</h4>
+                            <p>-Applications of machine learning-based predictive models in proteomics and genomics</p>
+                            <h4>Knowledge Discovery and Data Mining</h4>
+                            <p>-High-throughput analysis of intrinsic disorder in proteins</p>
                             <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
                         </div>
                     </div>
