--- a/publications.html
+++ b/publications.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-    <meta name="description" content="Fanchi Meng personal webpage">
-    <meta name="author" content="Fanchi Meng">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
     <title>Fanchi Meng</title>
 
@@ -46,7 +46,7 @@
                         <a href="resume.html">Resume</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                       <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -57,16 +57,16 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1>Fanchi Meng</h1>
-                            <p>I'm currently a Ph.D. candidate in <a href="http://www.ece.engineering.ualberta.ca/">Department of Electrical and Computer Engineering</a>, <a href="https://www.ualberta.ca/">University of Alberta</a>. I received my B.Eng. (Computer Science and Technology) and M.Eng. (Computer Application Technology) from <a href="http://cie.nwsuaf.edu.cn/">College of Information Engineering</a>, <a href="http://en.nwsuaf.edu.cn/index.htm">Northwest Agricultural & Forestry University</a>, China.</p>
+                            <h1>Publications</h1>
+                            <p id="pubs">[1] I. Na, F. Meng, L. Kurgan, and V. N. Uversky, &quot;Autophagy-related intrinsically disordered proteins in intra-nuclear compartments,&quot; <i>Molecular BioSystems, </i>vol. 12, pp. 2798-2817, 2016.</p>
+                            <p id="pubs">[2] F. Meng and L. Kurgan, &quot;DFLpred: High-throughput prediction of disordered flexible linker regions in protein sequences,&quot; <i>Bioinformatics, </i>vol. 32, pp. i341-i350, 2016.</p>
+                            <p id="pubs">[3] F. Meng, I. Na, L. Kurgan, and V. Uversky, &quot;Compartmentalization and Functionality of Nuclear Disorder: Intrinsic Disorder and Protein-Protein Interactions in Intra-Nuclear Compartments,&quot; <i>International Journal of Molecular Sciences, </i>vol. 17, p. 24, 2015.</p>
+                            <p id="pubs">[4] F. Meng, R. A. Badierah, H. A. Almehdar, E. M. Redwan, L. Kurgan, and V. N. Uversky, &quot;Unstructural biology of the dengue virus proteins,&quot; <i>FEBS Journal, </i>vol. 282, pp. 3368-3394, 2015.</p>
+                            <p id="pubs">[5] F. Meng, C. Cai, and H. Yan, &quot;A Bicluster-Based Bayesian Principal Component Analysis Method for Microarray Missing Value Estimation,&quot; <i>Biomedical and Health Informatics, IEEE Journal of, </i>vol. 18, pp. 863-871, 2014.</p>
+                            <p id="pubs">[6] F. Meng and C. Cai, &quot;Microarray missing value estimation by local Bayesian principal component analysis,&quot; <i>ICIC Express Letters, </i>vol. 7, pp. 535-9, 01/ 2013.</p>
+                            <p id="pubs">[7] F. Meng, C. Cai, and S. Li, &quot;Performance evaluation of L1-norm-based microarray missing value imputation,&quot; in <i>2012 2nd IEEE International Conference on Signal Processing, Communications and Computing, ICSPCC 2012, August 12, 2012 - August 15, 2012</i>, Hong Kong, 2012, pp. 723-727.</p>
+                            <p id="pubs">[8] C. Cai and F. Meng, &quot;Gene missing value imputation by matrix completion and local least square,&quot; <i>ICIC Express Letters, </i>vol. 6, pp. 1229-1234, 2012.</p>
                             <br>
-                            <img src="pics/wordsift.png">
-                            <br>
-                            <h1>Area of Interest</h1>
-                            <h4>Computational Predictive Models</h4>
-                            <p>-Applications of machine learning-based predictive models in proteomics and genomics</p>
-                            <h4>Knowledge Discovery and Data Mining</h4>
-                            <p>-High-throughput analysis of intrinsic disorder in proteins</p>
                             <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
                         </div>
                     </div>
