--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="project.html">Projects</a>
+                        <a href="projects.html">Projects</a>
                     </li>
                     <li>
                         <a href="publications.html">Publications</a>
@@ -46,7 +46,7 @@
                         <a href="resume.html">Resume</a>
                     </li>
                     <li>
-                        <a href="links.html">Links</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -58,8 +58,8 @@
                     <div class="row">
                         <div class="col-lg-12">
                          <h1>Resume</h1>
-                         <iframe src="FanchiMeng_resume_Oct2016.html" height="2300" width="900" scrolling="no"></iframe>
-                         <br>
+                         <iframe src="docs/FanchiMeng_resume_Oct2016.html" height="2200" width="900" scrolling="no"></iframe>
+                         <p><a href="docs/FanchiMeng_resume_Oct2016.pdf">PDF version</a></p>
                          <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
                      </div>
                  </div>
