--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-    <meta name="description" content="Fanchi Meng personal webpage">
-    <meta name="author" content="Fanchi Meng">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
     <title>Fanchi Meng</title>
 
@@ -57,16 +57,19 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1>Fanchi Meng</h1>
-                            <p>I'm currently a Ph.D. candidate in <a href="http://www.ece.engineering.ualberta.ca/">Department of Electrical and Computer Engineering</a>, <a href="https://www.ualberta.ca/">University of Alberta</a>. I received my B.Eng. (Computer Science and Technology) and M.Eng. (Computer Application Technology) from <a href="http://cie.nwsuaf.edu.cn/">College of Information Engineering</a>, <a href="http://en.nwsuaf.edu.cn/index.htm">Northwest Agricultural & Forestry University</a>, China.</p>
+                            <h1>Contact</h1>
+                            <img src="pics/avatar.jpg" alt="Fanchi"/>
+                            <h4>Address</h4>
+                            <p>W5-078, ECERF 9107 - 116 Street. Edmonton, AB T6G 2V4</p>
+                            <h4>Email</h4>
+                            <p>fanchi#ualberta.ca, replace "#" with "@"</p>
+                            <h4>Github</h4>
+                            <p><a href="https://github.com/fanchi">https://github.com/fanchi</a></p>
+                            <p>Repositories of some ongoing, unpublished projects are not visiable to public.</p>
+                            <h4>Biomine (Kurgan lab)</h4>
+                            <p><a href="http://biomine.ece.ualberta.ca/">http://biomine.ece.ualberta.ca/</a></p>
+                            
                             <br>
-                            <img src="pics/wordsift.png">
-                            <br>
-                            <h1>Area of Interest</h1>
-                            <h4>Computational Predictive Models</h4>
-                            <p>-Applications of machine learning-based predictive models in proteomics and genomics</p>
-                            <h4>Knowledge Discovery and Data Mining</h4>
-                            <p>-High-throughput analysis of intrinsic disorder in proteins</p>
                             <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
                         </div>
                     </div>
