--- a/resume.html
+++ b/resume.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Fanchi Meng resume">
+    <meta name="author" content="Fanchi">
 
     <title>Fanchi Meng</title>
 
