update meta data

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-    <meta name="description" content="Fanchi Meng personal webpage">
+    <meta name="description" content="Fanchi Meng's personal webpage">
+    <meta name="keywords" content="Fanchi Meng,Fanchi,孟繁驰">
     <meta name="author" content="Fanchi Meng">
 
-    <title>Fanchi Meng</title>
+    <title>Fanchi Meng|孟繁驰</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +58,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1>Fanchi Meng</h1>
+                            <h1>Fanchi Meng (孟繁驰)</h1>
                             <p>I'm currently a Ph.D. candidate in <a href="http://www.ece.engineering.ualberta.ca/">Department of Electrical and Computer Engineering</a>, <a href="https://www.ualberta.ca/">University of Alberta</a>. I received my B.Eng. (Computer Science and Technology) and M.Eng. (Computer Application Technology) from <a href="http://cie.nwsuaf.edu.cn/">College of Information Engineering</a>, <a href="http://en.nwsuaf.edu.cn/index.htm">Northwest Agricultural & Forestry University</a>, China.</p>
                             <br>
                             <img src="pics/wordsift.png">
