modify meta data

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
     <meta name="description" content="Fanchi Meng's personal webpage">
     <meta name="keywords" content="Fanchi Meng,Fanchi,孟繁驰">
+    <meta name="baidu-site-verification" content="IEdJEogETF" />
     <meta name="author" content="Fanchi Meng">
 
     <title>Fanchi Meng|孟繁驰</title>
