--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1>Fanchi Meng</h1>
+                            <h1>Fanchi Meng(孟繁驰)</h1>
                             <p>I'm currently a Ph.D. candidate in <a href="http://www.ece.engineering.ualberta.ca/">Department of Electrical and Computer Engineering</a>, <a href="https://www.ualberta.ca/">University of Alberta</a>. I received my B.Eng. (Computer Science and Technology) and M.Eng. (Computer Application Technology) from <a href="http://cie.nwsuaf.edu.cn/">College of Information Engineering</a>, <a href="http://en.nwsuaf.edu.cn/index.htm">Northwest Agricultural & Forestry University</a>, China.</p>
                             <br>
                             <img src="pics/wordsift.png">
