update linkedin profile badge

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
-
+        <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     </head>
 
     <body>
@@ -68,7 +68,8 @@
                             <p>Repositories of some ongoing, unpublished projects are not visiable to public.</p>
                             <h4>Biomine (Kurgan lab)</h4>
                             <p><a href="http://biomine.ece.ualberta.ca/">http://biomine.ece.ualberta.ca/</a></p>
-                            
+                            <h4>LinkedIn Profile</h4>
+                            <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="~fanchi"><a class="LI-simple-link" href='https://ca.linkedin.com/in/%7Efanchi?trk=profile-badge'>Fanchi Meng</a></div>
                             <br>
                             <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
                         </div>
