--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
 <head>
 
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <meta name="description" content="">
     <meta name="author" content="">
+
     <title>Simple Sidebar - Start Bootstrap Template</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
+    <!-- Custom styles for this template -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
 
-    <!-- Temporary fix for navbar responsiveness -->
+    <!-- Temporary navbar container fix -->
     <style>
     .navbar-toggler {
         z-index: 1;
@@ -83,14 +82,10 @@
     </div>
     <!-- /#wrapper -->
 
-    <!-- jQuery Version 3.1.1 -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Tether -->
-    <script src="js/tether.min.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/tether/tether.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
