--- a/contact.html
+++ b/contact.html
@@ -67,9 +67,10 @@
                             <p><a href="https://github.com/fanchi">https://github.com/fanchi</a></p>
                             <p>Repositories of some ongoing, unpublished projects are not visiable to public.</p>
                             <h4>Biomine (Kurgan lab)</h4>
-                            <p><a href="http://biomine.ece.ualberta.ca/">http://biomine.ece.ualberta.ca/</a></p>
+                            <p>Old link:<br><a href="http://biomine.ece.ualberta.ca">http://biomine.ece.ualberta.ca</a></p>
+                            <p>New link:<br><a href="http://biomine.cs.vcu.edu">http://biomine.cs.vcu.edu</a></p>
                             <h4>LinkedIn Profile</h4>
-                            <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="~fanchi"><a class="LI-simple-link" href='https://ca.linkedin.com/in/%7Efanchi?trk=profile-badge'>Fanchi Meng</a></div>
+                            <p><a href="https://www.linkedin.com/in/~fanchi">https://www.linkedin.com/in/~fanchi</a></p>
                             <br>
                             <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
                         </div>
