--- a/index.html
+++ b/index.html
@@ -60,15 +60,14 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <h1>Fanchi Meng</h1>
-                            <p>I'm currently a Ph.D. candidate at the <a href="http://www.ece.engineering.ualberta.ca/">Department of Electrical and Computer Engineering</a>, <a href="https://www.ualberta.ca/">University of Alberta</a>. I received my B.Eng. (Computer Science and Technology) and M.Eng. (Computer Application Technology) from <a href="http://cie.nwsuaf.edu.cn/">College of Information Engineering</a>, <a href="http://en.nwsuaf.edu.cn/aboutnwafu/overview/index.htm">Northwest Agricultural & Forestry University</a>, China.</p>
+                            <p>I am currently a Ph.D. candidate at the <a href="http://www.ece.engineering.ualberta.ca/">Department of Electrical and Computer Engineering</a>, <a href="https://www.ualberta.ca/">University of Alberta</a>, Canada. I received my B.Eng. (Computer Science and Technology) and M.Eng. (Computer Application Technology) from <a href="http://cie.nwsuaf.edu.cn/">College of Information Engineering</a>, <a href="http://en.nwsuaf.edu.cn/aboutnwafu/overview/index.htm">Northwest Agricultural & Forestry University</a>, China.</p>
                             <br>
                             <img src="pics/wordsift.png">
                             <br>
-                            <h1>Area of Interest</h1>
-                            <h4>Computational Predictive Models</h4>
-                            <p>-Applications of machine learning-based predictive models in proteomics and genomics</p>
-                            <h4>Knowledge Discovery and Data Mining</h4>
-                            <p>-High-throughput analysis of intrinsic disorder in proteins</p>
+                            <h4>Areas of Interest</h4>
+                            <li>Applications of machine learning based predictive models</li>
+                            <li>Knowledge discovery and data mining</li>
+                            <br><br>
                             <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
                         </div>
                     </div>
