--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,9 @@
                         <a href="projects.html">Projects</a>
                     </li>
                     <li>
+                        <a href="sideProjects.html">Side Projects</a>
+                    </li>
+                    <li>
                         <a href="publications.html">Publications</a>
                     </li>
                     <li>
