--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                         <a href="projects.html">Projects</a>
                     </li>
                     <li>
+                        <a href="sideProjects.html">Side Projects</a>
+                    </li>
+                    <li>
                         <a href="publications.html">Publications</a>
                     </li>
                     <li>
