--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                             <p>Old link:<br><a href="http://biomine.ece.ualberta.ca">http://biomine.ece.ualberta.ca</a></p>
                             <p>New link:<br><a href="http://biomine.cs.vcu.edu">http://biomine.cs.vcu.edu</a></p>
                             <h4>LinkedIn Profile</h4>
-                            <p><a href="https://www.linkedin.com/in/~fanchi">https://www.linkedin.com/in/mengfanchi</a></p>
+                            <p><a href="https://www.linkedin.com/in/mengfanchi">https://www.linkedin.com/in/mengfanchi</a></p>
                             <br>
                             <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
                         </div>
