--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110446201-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    gtag('config', 'UA-110446201-2');
+    </script>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -63,12 +71,12 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <h1>Fanchi Meng</h1>
-                            <p>I am currently a Ph.D. candidate at the <a href="http://www.ece.engineering.ualberta.ca/">Department of Electrical and Computer Engineering</a>, <a href="https://www.ualberta.ca/">University of Alberta</a>, Canada. I received my B.Eng. (Computer Science and Technology) and M.Eng. (Computer Application Technology) from <a href="http://cie.nwsuaf.edu.cn/">College of Information Engineering</a>, <a href="http://en.nwsuaf.edu.cn/aboutnwafu/overview/index.htm">Northwest Agricultural & Forestry University</a>, China.</p>
+                            <p>I am a Ph.D. graduate from the <a href="http://www.ece.engineering.ualberta.ca/">Department of Electrical and Computer Engineering</a>, <a href="https://www.ualberta.ca/">University of Alberta</a>, Canada. My major is <a href="https://ece.engineering.ualberta.ca/en/Research/Software.aspx">Software Engineering & Intelligent Systems</a>. I received my B.Eng. (Computer Science and Technology) and M.Eng. (Computer Application Technology) from <a href="http://cie.nwsuaf.edu.cn/">College of Information Engineering</a>, <a href="http://en.nwsuaf.edu.cn/aboutnwafu/overview/index.htm">Northwest Agricultural & Forestry University</a> ("Project 985" top university), China.</p>
                             <br>
                             <img src="pics/wordsift.png">
                             <br>
                             <h4>Areas of Interest</h4>
-                            <li>Applications of machine learning based predictive models</li>
+                            <li>Applications of machine learning/deep learning based predictive models</li>
                             <li>Knowledge discovery and data mining</li>
                             <br><br>
                             <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
