--- a/resume.html
+++ b/resume.html
@@ -61,8 +61,8 @@
                     <div class="row">
                         <div class="col-lg-12">
                          <h1>Resume</h1>
-                         <iframe src="docs/FanchiMeng_resume.html" height="1900" width="900" scrolling="no"></iframe>
-                         <p><a href="docs/FanchiMeng_resume.pdf">PDF version</a></p>
+                         <!-- <iframe src="docs/FanchiMeng_resume.html" height="1900" width="900" scrolling="no"></iframe> -->
+                         <p><a href="docs/resume_Fanchi Meng.pdf">PDF version</a></p>
                          <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Show/Hide sidebar</a>
                      </div>
                  </div>
