--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <h1>Fanchi Meng</h1>
-                            <p>I am a Ph.D. graduate from the <a href="http://www.ece.engineering.ualberta.ca/">Department of Electrical and Computer Engineering</a>, <a href="https://www.ualberta.ca/">University of Alberta</a>, Canada. My major is <a href="https://ece.engineering.ualberta.ca/en/Research/Software.aspx">Software Engineering & Intelligent Systems</a>. I received my B.Eng. (Computer Science and Technology) and M.Eng. (Computer Application Technology) from <a href="http://cie.nwsuaf.edu.cn/">College of Information Engineering</a>, <a href="http://en.nwsuaf.edu.cn/aboutnwafu/overview/index.htm">Northwest Agricultural & Forestry University</a> ("Project 985" top university), China.</p>
+                            <p>I am a Ph.D. graduate from the <a href="http://www.ece.engineering.ualberta.ca/">Department of Electrical and Computer Engineering</a>, <a href="https://www.ualberta.ca/">University of Alberta</a>, Canada. My major is <a href="https://ece.engineering.ualberta.ca/en/Research/Software.aspx">Software Engineering & Intelligent Systems</a>. I received my B.Eng. (Computer Science and Technology) and M.Eng. (Computer Application Technology) from <a href="http://cie.nwsuaf.edu.cn/">College of Information Engineering</a>, <a href="http://en.nwsuaf.edu.cn/aboutnwafu/overview/index.htm">Northwest Agricultural & Forestry University</a> ("Project 985" top university), China. Now I am a machine learning engineer at <a href="http://altaml.com/">AltaML.</a></p>
                             <br>
                             <img src="pics/wordsift.png">
                             <br>
